# final-exercise-hamzash10

./: .gitignore  Client.py  Corona.pptx  Explainer.py  GPT-explainer-1.md  Presentation.py  Status.py  Tests.py  Web_API.py  chatgpt_interaction.py  json_handler.py  main.py  openAI.py  pyproject.toml
client_package/: Client.py  Explainer.py  Modules.py  Status.py  Web_API.py  chatgpt_interaction.py  json_handler.py  main.py  presentation_reader.py
client_package.egg-info/: PKG-INFO
database/: Controller.py  UploadController.py  UserController.py  create_db.py  db_models.py
tests/: Tests.py
